# slick-greeter

./: .gitignore  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  makepot  meson.build  meson_options.txt  slick-greeter.doap  slick-greeter.pot  unity-greeter.doap
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml
data/: Makefile.am  com.canonical.unity-greeter.gschema.xml  meson.build  slick-greeter-check-hidpi.1  slick-greeter-enable-tap-to-click.1  slick-greeter-set-keyboard-layout.1  slick-greeter.1  slick-greeter.8  slick-greeter.conf  slick-greeter.desktop  unity-greeter.1  unity-greeter.desktop  x.dm.slick-greeter.gschema.xml
debian/: 50-unity-greeter.conf  changelog  control  copyright  install  maintscript  rules  watch
files/: Makefile.in  meson.build
meson/: meson-postinstall.sh
po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  am.po  an.po  ar.po  ast.po  az.po  be.po  bem.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  crh.po  cs.po  cv.po  cy.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fo.po  fr.po  fr_CA.po  (+87 more)
src/: Makefile.am  animate-timer.vala  background.vala  cached-image.vala  cairo-utils.vala  config.vapi  dash-box.vala  dash-button.vala  dash-entry.vala  email-autocompleter.vala  fadable-box.vala  fadable.vala  fading-label.vala  fixes.vapi  flat-button.vala  greeter-list.vala  idle-monitor.vala  indicator.vapi  list-stack.vala  logo-generator.vala  main-window.vala  menu.vala  menubar.vala  meson.build  prompt-box.vala  remote-login-service.vala  session-list.vala  settings-daemon.vala  settings.vala  shutdown-dialog.vala  slick-greeter.vala  toggle-box.vala  unity-greeter.vala  user-avatar.vala  user-list.vala  user-prompt-box.vala  xsync.vapi
tests/: Makefile.am  menubar.vala  meson.build  slick-greeter.vala  test-list.vala  test-main-window.vala  test.vala  unity-greeter.vala
