# -*- Mode: Automake; indent-tabs-mode: t; tab-width: 4 -*-

SUBDIRS = data po src tests

EXTRA_DIST = \
	autogen.sh \
	unity-greeter.doap

DISTCLEANFILES = \
	Makefile.in \
	aclocal.m4 \
	configure \
	config.h.in \
	config.h \
	depcomp \
	gtk-doc.make \
	install-sh \
	missing \
	mkinstalldirs \
	omf.make \
	xmldocs.make \
	po/Makefile.in.in
