# -*- Mode: Automake; indent-tabs-mode: t; tab-width: 4 -*-

SUBDIRS = data files po src

EXTRA_DIST = \
	autogen.sh \
	slick-greeter.doap

DISTCLEANFILES = \
	Makefile.in \
	aclocal.m4 \
	configure \
	config.h.in \
	config.h \
	depcomp \
	gtk-doc.make \
	install-sh \
	missing \
	mkinstalldirs \
	omf.make \
	xmldocs.make \
	po/Makefile.in.in
